@@ -23,6 +23,7 @@ Broker:
   MOSQ_ERR_QUOTA_EXCEEDED to have the message be rejected. MQTT v5 clients
   using QoS 1 or 2 will receive the quota-exceeded reason code in the
   corresponding PUBACK/PUBREC.
+- MOSQ_EVT_TICK is now passed to plugins when `per_listener_settings` is true.
 
 Client library:
 - Add MOSQ_OPT_DISABLE_SOCKETPAIR to allow the disabling of the socketpair
